--- a/src/favorites.html
+++ b/src/favorites.html
@@ -55,9 +55,9 @@
          </ul>
 
          <!-- Button mobile-menu -->
-         <button class="mobile-menu-btn header-menu-toggle" data-modal-open>
+         <button class="mobile-menu-btn button-header" data-modal-open type="button">
             <svg class="mobile-menu-icon" width="32" height="16">
-               <use href="./img/sprite.svg#icon-burger-btn"></use>
+               <use href="./img/sprite.svg#icon-burger"></use>
             </svg>
          </button>
       </div>
@@ -65,11 +65,14 @@
    </header>
 
    <main>
+
+      <!-- SECTION INFO -->
+
       <section class="info">
          <div class="info-container container">
             <div class="info-quote">
-               <h2 class="info-quote-title"></h2>
-               <p class="js-info-quote info-quote-cont"></p>
+               <h2 class="info-quote-title">Quote of the day</h2>
+               <p class="js-quote-text info-quote-cont"></p>
                <p class="js-quote-author info-quote-author"></p>
                <div class="info-icon-wrap">
                   <svg class="info-icon-item" width="18" height="20">
@@ -96,27 +99,55 @@
          </div>
       </section>
 
-      <section class="favorites">
-         <h2></h2>
+      <!-- SECTION FAVORITES -->
+
+      <section class="favor">
+         <div class="container favor-container">
+            <div class="favor-wrapper">
+               <h2 class="favor-title">Favorites</h2>
+               <div class="js-favor-content favor-content">
+
+                  <!-- MARKUP FOR PLUG, WHEN NOT FAVORITES EXERCISES -->
+
+                  <!-- <div class="favor-plug-wrap">
+                     <div class="favor-icon-wrap">
+                        <img class="favor-icon-item" src="./img/dumbbell/dumbbell-desktop.png" alt="">
+                     </div>
+                     <div class="favor-text">
+                        It appears that you haven't added any exercises to your favorites yet. To get started, you can
+                        add
+                        exercises that you like to your favorites for easier access in the future.
+                     </div>
+                  </div> -->
+
+               </div>
+
+
+            </div>
+
+         </div>
 
       </section>
 
-      <section>
-
-      </section>
    </main>
 
-   <section>
+   <!-- <ul>
+      <li>FAVORITE EXERCISES</li>
+      <li>FAVORITE EXERCISES</li>
+      <li>FAVORITE EXERCISES</li>
+      <li>FAVORITE EXERCISES</li>
+      <li>FAVORITE EXERCISES</li>
+   </ul> -->
 
-
-   </section>
 
    <!-- ------------MOBILE-MENU----------- -->
 
+   <load src="partials/modal-menu.html" />
+
+   <!-- Liudmyla Bykova -->
+   <load src="partials/arrow-button.html" />
 
 
    <script type="module" src="./favorites.js"></script>
 
 </body>
-
-</html>
