--- a/src/favorites.html
+++ b/src/favorites.html
@@ -3,8 +3,21 @@
 
 <head>
    <meta charset="UTF-8">
+
+   <!-- favicon -->
+   <!-- favicon -->
+   <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
+   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+   <link rel="manifest" href="/site.webmanifest" />
+   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+   <meta name="msapplication-TileColor" content="#da532c" />
+   <meta name="theme-color" content="#ffffff" />
+
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
    <title>Energy Flow</title>
+
    <!-- Modern-normalize -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
@@ -14,7 +27,7 @@
 
 <body>
 
-   <header class="header">
+   <header class="header header-favorites">
       <div class="header-container container">
          <nav class="header-nav">
             <a class="header-logo" href="./index.html">energy.flow</a>
@@ -70,21 +83,10 @@
 
       <section class="info">
          <div class="info-container container">
-            <div class="info-quote">
-               <h2 class="info-quote-title">Quote of the day</h2>
-               <p class="js-quote-text info-quote-cont"></p>
-               <p class="js-quote-author info-quote-author"></p>
-               <div class="info-icon-wrap">
-                  <svg class="info-icon-item" width="18" height="20">
-                     <use href="./img/sprite.svg#icon-running-men"></use>
-                  </svg>
-               </div>
-               <div class="info-marks-wrap">
-                  <svg class="info-marks-item">
-                     <use href="./img/sprite.svg#icon-inverted-commas"></use>
-                  </svg>
-               </div>
-            </div>
+
+            <!-- --info-quote import-- -->
+            <load src="partials/qoute-day.html" />
+
             <div class="info-img"></div>
             <div class="info-advice">
                <div class="info-advice-pict">
@@ -121,8 +123,6 @@
                   </div> -->
 
                </div>
-
-
             </div>
 
          </div>
