--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Energy Flow</title>
 
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
@@ -14,6 +12,9 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Energy Flow</title>
 
   <!-- Modern-normalize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -26,7 +27,13 @@
 <body>
 
   <load src="partials/header.html" />
+  <load src="partials/hero.html" />
+  <load src="partials/quote.html" />
+  <load src="partials/exercises.html" />
+  <load src="partials/modal-menu.html" />
 
+  <!-- Liudmyla Bykova -->
+  <load src="partials/arrow-button.html" />
 
 
 
